# mneme

./: .gitignore  .gitmessage  AGENTS.md  CONTRIBUTING.md  README.md  TECH_DEBT.md  pyproject.toml
.hermes/plans/: 2026-06-13_mneme-mvp-implementation.md
designs/: 01-design-doc-v0.1.md  architecture.html
docs/: PLANS.md  QUALITY_SCORE.md
docs/design-docs/: comparison-mempalace.md  index.md  v0.1-core-architecture.md  weight-calibration.md
docs/exec-plans/: v0.3-plugin-multi-user.md
docs/exec-plans/active/: v0.2b-data-management.md  v0.2b-sleep-computation.md
docs/exec-plans/completed/: v0.2a-conflict-detection.md
docs/references/: architecture-llms.txt  python-toolchain-llms.txt
docs/research/: 01-brainstorming-record.md  02-competitive-landscape.md  04-sleep-time-compute.md  05-benchmarks.md  06-technical-references.md  07-evoarena-evomem-analysis.md  08-evolvemem-analysis.md  index.md  locomo-benchmark-reference.md
research/: 02-competitive-landscape.md
src/mneme/: __init__.py  cli.py  server.py
src/mneme/api/: app.py  batch.py  routes.py
src/mneme/embed/: __init__.py  model.py
src/mneme/engine/: quality.py  search.py  sleep.py  store.py  types.py  weight.py
src/mneme/mcp/: server.py
src/mneme/models/: memory.py
src/mneme/plugin/: base.py  (+4 more)
tests/: fakes.py  integration_test_v03.py  test_api.py  test_batch.py  test_cli.py  test_db.py  test_embed.py  test_engine_search.py  test_engine_store.py  test_integration.py  test_mcp.py  test_multi_user.py  test_plugin.py  test_quality.py  test_sleep.py  test_types.py  test_vector.py  test_weight.py
(+5 files in other folders)
