[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneme"
version = "0.1.0"
description = "Edge-first memory for AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mneme by Emma" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/0x-0cd/mneme"
Repository = "https://github.com/0x-0cd/mneme"

[project.scripts]
mneme = "mneme.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mneme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["B904", "B905"]  # raise-without-from-inside-except too verbose for MVP

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # test fixtures often have unused args

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
